null check on requirements